# go-site

./: .gitignore  .travis.old-legacy  .travis.yml  CLAUDE.md  Jenkinsfile  LICENSE  Makefile  README.goex.yaml  README.md  README.org  package.json
scripts/: GitHubIssueCreatorExp01.lambda.py  Makefile-gaf-reprocess  README.md  aggregate-json-reports.py  aggregate-references.py  aggregate-stats.py  annotation-review-report.py  assigned-by-reports-page-template.html  bootstrap-dataset-yaml.pl  bootstrap-gorefs-md.pl  bucket-indexer.js  bucket-indexer.py  bulk-user-update.py  cloudfront-log-lister.js  collate-gpads.pl  combine-datasets-metadata.py  combined_assigned_by.py  correct_paint_symbols.py  create-bdbag-remote-file-manifest.py  datasets.py  db-xrefs-yaml2legacy.js  directory-index-template.html  directory-indexer.py  directory_indexer.py  download-annotation-sources.py  download_goex_data.py  download_source_gafs.py  downloads-page-gen.py  downloads-page-template.html  fix-users.js  gaf_pmid_author_list.pl  gaferencer-by-metadata.py  gaferencer-reprocess.sh  gaferencer_by_metadata.py  gen-model-meta.py  generate-gorefs-summary.pl  generate-gorules-summary.pl  github_issue_summary.py  go-cam-records-template.html  go-cam-stats-template.html  (+41 more)
scripts/goref_parser/: README.md  goref.py  parser.py  requirements.txt  utils.py
scripts/jenkins/: README.md  create-annotation-summary-statistics.js  markup-inference-report.pl  package.json  query-github-for-new-tickets.js  query-sf-for-new-terms.js
scripts/legacy-sql/migrate/: changes-2007-08-23.sql  changes-2007-10-08.sql  (+1 more)
(+489 files in other folders)
