[tool.poetry]
name = "go-site"
version = "0.0.0"
description = "This directory contains many scripts used by go-site and within a pipeline context."
authors = ["GO Consortium <helpdesk@geneontology.org>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"  # Adjust this to your project's Python version
PyYAML = "*"
ontobio = "2.8.4"
click = "*"
pyparsing = "2.4.7"
antlr4-python3-runtime = "4.9.3"
docutils = "0.21.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[scripts]
gen_model_meta = "gen_model_meta:main"